feat: Possible to get creator pubs, crud and search left

--- a/index.html
+++ b/index.html
@@ -58,12 +58,16 @@
 <script src="js/services/PubService.js"></script>
 <script src="js/services/ResourceService.js"></script>
 <script src="js/services/LoginService.js"></script>
+<script src="js/services/UserService.js"></script>
+<script src="js/services/CRUDPubService.js"></script>
 
 <!-- Controllers -->
 <script src="js/controllers/PubListController.js"></script>
 <script src="js/controllers/PubDetailController.js"></script>
 <script src="js/controllers/MapController.js"></script>
 <script src="js/controllers/loginController.js"></script>
+<script src="js/controllers/CRUDController.js"></script>
+<script src="js/controllers/UserListController.js"></script>
 
 </body>
 </html>
