feat: Can see own pubs,routes for crud, add pub

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 <script src="js/services/LoginService.js"></script>
 <script src="js/services/UserService.js"></script>
 <script src="js/services/CRUDPubService.js"></script>
+<script src="js/services/TagService.js"></script>
 
 <!-- Controllers -->
 <script src="js/controllers/PubListController.js"></script>
@@ -68,6 +69,8 @@
 <script src="js/controllers/loginController.js"></script>
 <script src="js/controllers/CRUDController.js"></script>
 <script src="js/controllers/UserListController.js"></script>
+<script src="js/controllers/PubCreateController.js"></script>
+<script src="js/controllers/TagController.js"></script>
 
 </body>
 </html>
