feat:Search finished, delete pub almost finished

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 <script src="js/controllers/UserListController.js"></script>
 <script src="js/controllers/PubCreateController.js"></script>
 <script src="js/controllers/TagController.js"></script>
+<script src="js/controllers/SearchController.js"></script>
 
 </body>
 </html>
