feat: Can save complex array, 98% functionality done

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 <script src="js/controllers/PubCreateController.js"></script>
 <script src="js/controllers/TagController.js"></script>
 <script src="js/controllers/SearchController.js"></script>
+<script src="js/controllers/PubEditController.js"></script>
 
 </body>
 </html>
