--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <title>Pubs map</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
-    <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
-    <link rel="stylesheet" href="app.css">
-    <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.0.16/css/bulma.min.css" media="screen" title="no title" charset="utf-8">
 </head>
 <body data-ng-controller="appController as app">
 <div class="container">
@@ -19,14 +16,14 @@
         <hr />
     </div>
 
-    <div class="jumbotron">
+    <div class="columns">
         <!-- Partial view goes here -->
-        <div data-ng-view="">This should be replaced</div>
-    </div>
-    <div data-ng-controller="MapController as mapctrl">
-        <map center="55.594604, 13.013505" zoom="14" class="map" on-click="mapctrl.checkPosition()"></map>
-    </div>
+        <div class="column" data-ng-view="">This should be replaced</div>
 
+        <div class="column" data-ng-controller="MapController as mapctrl">
+            <map center="55.594604, 13.013505" zoom="14" class="map" on-click="mapctrl.checkPosition() "></map>
+        </div>
+    </div>
 
     <div class="footer">
         <p>Jasmin Bejtovic, Webbprogrammerare 2014</p>
@@ -61,6 +58,7 @@
 <script src="js/services/UserService.js"></script>
 <script src="js/services/CRUDPubService.js"></script>
 <script src="js/services/TagService.js"></script>
+<script src="js/services/PositionService.js"></script>
 
 <!-- Controllers -->
 <script src="js/controllers/PubListController.js"></script>
