debug: Fixed that tags view is visible

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 <script src="js/services/CRUDPubService.js"></script>
 <script src="js/services/TagService.js"></script>
 <script src="js/services/PositionService.js"></script>
+<script src="js/MyDirective.js"></script>
 
 <!-- Controllers -->
 <script src="js/controllers/PubListController.js"></script>
